# SRIndexProto

./: README.md  pyproject.toml
src/srindexproto/: cli.py
