[project]
name = "SRIndexProto"
version = "0.1.1"
description = "Default template for PDM package"
authors = [
    {name = "nunininu", email = "sgcho0907@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[project.urls]
Homepage = "https://github.com/nunininu/SRIndexProto"
Issues = "https://github.com/nunininu/SRIndexProto/issues"
