[project]
name = "SRIndexProto"
version = "0.2.1"
description = "Default template for PDM package"
authors = [
    {name = "nunininu", email = "sgcho0907@gmail.com"},
]
dependencies = ["typer>=0.15.1", "pandas>=2.2.3"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[project.scripts]
srindex = "srindexproto.cli:entry_point"

[project.urls]
Homepage = "https://github.com/nuni-org/SRIndexProto"
Issues = "https://github.com/nuni-org/SRIndexProto/issues"
